# fastapi-tdd-docker

./: .gitignore  README.md  README.rst  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: config.py  main.py
fastapi-tdd-docker/: Dockerfile  Dockerfile.prod  pyproject.toml
fastapi-tdd-docker/.github/workflows/: main.yml
fastapi-tdd-docker/app/: config.py  db.py  main.py
fastapi-tdd-docker/app/api/: crud.py  summaries.py
fastapi-tdd-docker/tests/: conftest.py  test_ping.py  test_summaries.py
project/: Dockerfile  pyproject.toml
project/app/: config.py  db.py  main.py
